# productcatalogservice

./: Cargo.toml  Dockerfile  README.md
src/: client.rs  server.rs
