[package]
name = "productcatalogservice"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the ProductCatalogService gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the ProductCatalogService gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.7.2"
tonic-health = "0.6.0"
prost = "0.10.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = { version = "0.7.2",  features = ["prost"] }